[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
console-subscriber = "0.3.0"
dashmap = "6.0.1"
futures = "0.3.30"
opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio-console = "0.1.11"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
blake3 = "1.5.1"
bytes = "1.6.0"
derive_builder = "0.20.0"
derive_more = "0.99.18"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
] }
